# openenv-datapipeline

./: .gitignore  Dockerfile  Makefile  README.md  all_tasks_comparison.html  analytics.py  app.py  benchmark_report.html  benchmark_report.json  bug_injector.py  compete.py  curriculum.py  dashboard.py  demo.py  grpo_finetune_colab.py  inference.py  multi_agent.py  openenv.yaml  pyproject.toml  replay_ep_test.html  requirements.txt  reward_curve.json  reward_curves.html  setup.ps1  train.py  train_replay_patch.py  training_results.html  visualize.py
.github/workflows/: ci.yml
benchmarks/: __init__.py  agents.py  run_benchmarks.py
env/: environment.py  models.py
graders/: graders.py
server/: __init__.py  app.py
tasks/: definitions.py  extra_tasks.py
tests/: test_env.py
