[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openenv-datapipeline"
version = "1.0.0"
description = "OpenEnv Data Pipeline Debugger — A real-world environment where AI agents debug broken ETL pipelines."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["openenv", "data-engineering", "etl", "agent-benchmark", "reinforcement-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "openai==1.51.0",
    "pyyaml==6.0.2",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27.2",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Harsha-2005/openenv-datapipeline"
Repository = "https://huggingface.co/spaces/Harsha-2005/openenv-datapipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "tasks*", "graders*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]